--- a/Crypto/index.html
+++ b/Crypto/index.html
@@ -166,18 +166,18 @@
                     </p>
                 </div>
                 <div class="section4-right-item-post">
-                    <h3>
+                    <h5>
                         <img src="img/cube-icon.png" alt="logo cube">budgeting intervals
-                    </h3>
+                    </h5>
                     <p>
                         Lorem ipsum dolor sit amet. Qui consequatur sint 33 voluptatem officia et sint laboriosam sed
                         ipsa sint ut voluptatum labore et.
                     </p>
                 </div>
                 <div class="section4-right-item-post">
-                    <h3>
+                    <h5>
                         <img src="img/cube-icon2.png" alt="logo cube">budgeting intervals
-                    </h3>
+                    </h5>
                     <p>
                         Lorem ipsum dolor sit amet. Qui consequatur sint 33 voluptatem officia et sint laboriosam sed
                         ipsa sint ut voluptatum labore et.
@@ -234,9 +234,9 @@
                     </div>
                     <div class="section6-item-block">
                         <img src="img/chart-bar-icon.png" alt="chart bar icon">
-                        <h1>
+                        <h3>
                             Sales
-                        </h1>
+                        </h3>
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipis elit. Sit enim nec, proin faucibus nibh et
                             sagittis a. Lacinia purus ac amet.
@@ -244,9 +244,9 @@
                     </div>
                     <div class="section6-item-block">
                         <img src="img/board-icon.png" alt="board icon">
-                        <h1>
+                        <h3>
                             Onboarding
-                        </h1>
+                        </h3>
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipis elit. Sit enim nec, proin faucibus nibh et
                             sagittis a. Lacinia purus ac amet.
@@ -254,9 +254,9 @@
                     </div>
                     <div class="section6-item-block">
                         <img src="img/archive-content-icon.png" alt="archive icon">
-                        <h1>
+                        <h3>
                             Product
-                        </h1>
+                        </h3>
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipis elit. Sit enim nec, proin faucibus nibh et
                             sagittis a. Lacinia purus ac amet.
@@ -264,9 +264,9 @@
                     </div>
                     <div class="section6-item-block">
                         <img src="img/files-icon.png" alt="files icon">
-                        <h1>
+                        <h3>
                             Quality
-                        </h1>
+                        </h3>
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipis elit. Sit enim nec, proin faucibus nibh et
                             sagittis a. Lacinia purus ac amet.
@@ -274,9 +274,9 @@
                     </div>
                     <div class="section6-item-block">
                         <img src="img/diagram-icon.png" alt="diagram icon">
-                        <h1>
+                        <h3>
                             Result
-                        </h1>
+                        </h3>
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipis elit. Sit enim nec, proin faucibus nibh et
                             sagittis a. Lacinia purus ac amet.
@@ -327,9 +327,56 @@
             </div>
             <div class="section8-item2">
                 <div class="section8-item2-photo">
-                    <img src="img/section8-foto1.jpg" alt="photo of a gray-haired man">
-                    <img src="img/section8-foto2.jpg" alt="photo of a woman with black hair">
-                    <img src="img/section8-foto3.jpg" alt="photo of a woman with red hair">
+                    <div class="section8-photo-container">
+                        <img src="img/section8-foto1.jpg" alt="photo of a gray-haired man">
+                        <div class="section8-photo-content">
+                            <div class="section8-photo-title">
+                                <h2>
+                                    Albert Flores
+                                </h2>
+                                <h3>
+                                    Founder of GearUp
+                                </h3>
+                            </div>
+                            <div class="section8-icon-container">
+                                <img src="img/Play.png" alt="play icon">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="section8-photo-container">
+                        <img src="img/section8-foto2.jpg" alt="photo of a woman with black hair">
+                        <div class="section8-photo-content">
+                            <div class="section8-photo-title">
+                                <h2>
+                                    Leslie Alexander
+                                </h2>
+                                <h3>
+                                    Co-Founder of Womenia
+                                </h3>
+                            </div>
+                            <div class="section8-icon-container">
+                                <img src="img/Play.png" alt="play icon">
+                            </div>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="section8-photo-container">
+                            <img src="img/section8-foto3.jpg" alt="photo of a woman with red hair">
+                            <div class="section8-photo-content">
+                                <div class="section8-photo-title">
+                                    <h2>
+                                        Courtney Henry
+                                    </h2>
+                                    <h3>
+                                        Founder of CH Beauty
+                                    </h3>
+                                </div>
+                                <div class="section8-icon-container">
+                                    <img src="img/Play.png" alt="play icon">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="section8-item2-ellipse">
                     <img src="img/ellipse.png" alt="ellipse">
