--- a/Crypto/index.html
+++ b/Crypto/index.html
@@ -138,50 +138,55 @@
         </div>
     </section>
     <section class="section4">
-        <div class="section4-item-container">
-            <div class="section4-left-item">
-                <div class="section4-left-item-elips">
-                    <img src="img/ellipse.png" alt="ellipse">
+        <div class="container">
+            <div class="section4-item-container">
+                <div class="section4-left-item">
+                    <div class="section4-left-item-elips">
+                        <img src="img/ellipse.png" alt="ellipse">
+                    </div>
+                    <div class="section4-left-item-iphone">
+                        <img src="img/iphone-section4.png" alt="photo iPhone">
+                    </div>
                 </div>
-                <div class="section4-left-item-iphone">
-                    <img src="img/iphone-section4.png" alt="photo iPhone">
-                </div>
-            </div>
-            <div class="section4-right-item">
-                <div class="section4-right-item-title">
-                    <h2>
-                        features
-                    </h2>
-                    <h3>
-                        Crypto premium
-                    </h3>
-                </div>
-                <div class="section4-right-item-post">
-                    <h5>
-                        <img src="img/star-icon.png" alt="logo star">budgeting intervals
-                    </h5>
-                    <p>
-                        Lorem ipsum dolor sit amet. Qui consequatur sint 33 voluptatem officia et sint laboriosam sed
-                        ipsa sint ut voluptatum labore et.
-                    </p>
-                </div>
-                <div class="section4-right-item-post">
-                    <h5>
-                        <img src="img/cube-icon.png" alt="logo cube">budgeting intervals
-                    </h5>
-                    <p>
-                        Lorem ipsum dolor sit amet. Qui consequatur sint 33 voluptatem officia et sint laboriosam sed
-                        ipsa sint ut voluptatum labore et.
-                    </p>
-                </div>
-                <div class="section4-right-item-post">
-                    <h5>
-                        <img src="img/cube-icon2.png" alt="logo cube">budgeting intervals
-                    </h5>
-                    <p>
-                        Lorem ipsum dolor sit amet. Qui consequatur sint 33 voluptatem officia et sint laboriosam sed
-                        ipsa sint ut voluptatum labore et.
-                    </p>
+                <div class="section4-right-item">
+                    <div class="section4-right-item-title">
+                        <h2>
+                            features
+                        </h2>
+                        <h3>
+                            Crypto premium
+                        </h3>
+                    </div>
+                    <div class="section4-right-item-post">
+                        <h5>
+                            <img src="img/star-icon.png" alt="logo star">budgeting intervals
+                        </h5>
+                        <p>
+                            Lorem ipsum dolor sit amet. Qui consequatur sint 33 voluptatem officia et sint laboriosam
+                            sed
+                            ipsa sint ut voluptatum labore et.
+                        </p>
+                    </div>
+                    <div class="section4-right-item-post">
+                        <h5>
+                            <img src="img/cube-icon.png" alt="logo cube">budgeting intervals
+                        </h5>
+                        <p>
+                            Lorem ipsum dolor sit amet. Qui consequatur sint 33 voluptatem officia et sint laboriosam
+                            sed
+                            ipsa sint ut voluptatum labore et.
+                        </p>
+                    </div>
+                    <div class="section4-right-item-post">
+                        <h5>
+                            <img src="img/cube-icon2.png" alt="logo cube">budgeting intervals
+                        </h5>
+                        <p>
+                            Lorem ipsum dolor sit amet. Qui consequatur sint 33 voluptatem officia et sint laboriosam
+                            sed
+                            ipsa sint ut voluptatum labore et.
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -287,30 +292,32 @@
         </div>
     </section>
     <section class="section7">
-        <div class="section7-item-container">
-            <div class="section7-left-item">
-                <div class="section7-left-item-elips">
-                    <img src="img/ellipse.png" alt="ellips-img">
+        <div class="container">
+            <div class="section7-item-container">
+                <div class="section7-left-item">
+                    <div class="section7-left-item-elips">
+                        <img src="img/ellipse.png" alt="ellips-img">
+                    </div>
+                    <div class="section7-left-item-iphone">
+                        <img src="img/iphone-section7.png" alt="iPhone foto">
+                    </div>
                 </div>
-                <div class="section7-left-item-iphone">
-                    <img src="img/iphone-section7.png" alt="iPhone foto">
+                <div class="section7-right-item">
+                    <h2>
+                        How it works
+                    </h2>
+                    <h3>
+                        Viewing long- term and short -term forcast
+                    </h3>
+                    <p>
+                        Lorem ipsum dolor sit amet. Qui consequatur sint 33 voluptatem officia et sint laboriosam sed
+                        ipsa sint ut voluptatum labore et possimus voluptas.
+                    </p>
+                    <a href="#">Explore Now</a>
                 </div>
             </div>
-            <div class="section7-right-item">
-                <h2>
-                    How it works
-                </h2>
-                <h3>
-                    Viewing long- term and short -term forcast
-                </h3>
-                <p>
-                    Lorem ipsum dolor sit amet. Qui consequatur sint 33 voluptatem officia et sint laboriosam sed
-                    ipsa sint ut voluptatum labore et possimus voluptas.
-                </p>
-                <a href="#">Explore Now</a>
-            </div>
         </div>
-        </div>
+
     </section>
     <section class="section8">
         <div class="container">
@@ -359,21 +366,19 @@
                             </div>
                         </div>
                     </div>
-                    <div>
-                        <div class="section8-photo-container">
-                            <img src="img/section8-foto3.jpg" alt="photo of a woman with red hair">
-                            <div class="section8-photo-content">
-                                <div class="section8-photo-title">
-                                    <h2>
-                                        Courtney Henry
-                                    </h2>
-                                    <h3>
-                                        Founder of CH Beauty
-                                    </h3>
-                                </div>
-                                <div class="section8-icon-container">
-                                    <img src="img/Play.png" alt="play icon">
-                                </div>
+                    <div class="section8-photo-container">
+                        <img src="img/section8-foto3.jpg" alt="photo of a woman with red hair">
+                        <div class="section8-photo-content">
+                            <div class="section8-photo-title">
+                                <h2>
+                                    Courtney Henry
+                                </h2>
+                                <h3>
+                                    Founder of CH Beauty
+                                </h3>
+                            </div>
+                            <div class="section8-icon-container">
+                                <img src="img/Play.png" alt="play icon">
                             </div>
                         </div>
                     </div>
