--- a/Crypto/index.html
+++ b/Crypto/index.html
@@ -26,15 +26,20 @@
                     </h2>
                 </div>
                 <div class="right-block">
+                    <div class="right-block-hamburger" onclick="toggleMenu()">
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                    </div>
                     <ul class="menu" id="menu">
                         <li><a href="#">Home</a></li>
                         <li><a href="#">About</a></li>
                         <li><a href="#">Service</a></li>
                         <li><a href="#">Events</a></li>
+                        <div class="header-button">
+                            <a href="#">Sign in</a>
+                        </div>
                     </ul>
-                    <div class="header-button">
-                        <a href="#">Sign in</a>
-                    </div>
                 </div>
             </div>
         </div>
@@ -522,6 +527,16 @@
             </div>
         </div>
     </footer>
+    <script>
+        function toggleMenu() {
+            var menu = document.getElementById('menu');
+            var hamburger = document.querySelector('.right-block-hamburger');
+            var content = document.getElementById('content');
+            menu.classList.toggle('active');
+            hamburger.classList.toggle('active');
+            content.classList.toggle('shifted');
+        } 
+    </script>
 </body>
 
 </html>
