--- a/Crypto/index.html
+++ b/Crypto/index.html
@@ -416,7 +416,7 @@
         <div class="footer-container">
             <div class="footer-item1">
                 <div class="footer-item1-container">
-                    <div class="footer-item1-block1">
+                    <div class="footer-item1-group1">
                         <h5>
                             Product
                         </h5>
@@ -431,7 +431,7 @@
                             <li><a href="#">Releases</a></li>
                         </ul>
                     </div>
-                    <div class="footer-item1-block2">
+                    <div class="footer-item1-group1">
                         <h5>
                             Company
                         </h5>
@@ -456,7 +456,7 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="footer-item1-block3">
+                    <div class="footer-item1-group2">
                         <h5>
                             Resources
                         </h5>
@@ -481,7 +481,7 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="footer-item1-block3">
+                    <div class="footer-item1-group2">
                         <h5>
                             Social
                         </h5>
