--- a/Crypto/index.html
+++ b/Crypto/index.html
@@ -46,7 +46,7 @@
     </header>
     <section class="section1">
         <div class="container">
-            <div class="container-fluid">
+            <div class="section1-wrapper">
                 <div class="elips">
                     <div class="elips-img">
                         <img src="img/ellipse.png" alt="ellipse">
@@ -77,19 +77,19 @@
             <div class="section2-wrapper">
                 <ul>
                     <li>
-                        <a href="#"><img src="img/waverio.png" alt="logo waverio"></a>
+                        <a href="#"><img src="img/waverio.svg" alt="logo waverio"></a>
                     </li>
                     <li>
-                        <a href="#"><img src="img/logipsum.png" alt="logo logipsum"></a>
+                        <a href="#"><img src="img/logipsum.svg" alt="logo logipsum"></a>
                     </li>
                     <li>
-                        <a href="#"><img src="img/alterbone.png" alt="logo Alterbone"></a>
+                        <a href="#"><img src="img/alterbone.svg" alt="logo Alterbone"></a>
                     </li>
                     <li>
-                        <a href="#"><img src="img/ridoria.png" alt="logo Ridoria"></a>
+                        <a href="#"><img src="img/ridoria.svg" alt="logo Ridoria"></a>
                     </li>
                     <li>
-                        <a href="#"><img src="img/tinygone.png" alt="logo Tinygone"></a>
+                        <a href="#"><img src="img/tinygone.svg" alt="logo Tinygone"></a>
                     </li>
                 </ul>
             </div>
@@ -107,9 +107,9 @@
                         ipsa sint ut voluptatum labore et possimus voluptas.
                     </p>
                 </div>
-                <div class="section3-item-container">
+                <div class="section3-bottom">
                     <div class="section3-item">
-                        <img src="img/item1.png" alt="logo wallet">
+                        <img src="img/item1.svg" alt="logo wallet">
                         <h2>
                             Connect wallet & exchanges
                         </h2>
@@ -119,7 +119,7 @@
                         </p>
                     </div>
                     <div class="section3-item">
-                        <img src="img/item2.png" alt="logo eye">
+                        <img src="img/item2.svg" alt="logo eye">
                         <h2>
                             Connect wallet & exchanges
                         </h2>
@@ -129,7 +129,7 @@
                         </p>
                     </div>
                     <div class="section3-item">
-                        <img src="img/item3.png" alt="logo document">
+                        <img src="img/item3.svg" alt="logo document">
                         <h2>
                             Connect wallet & exchanges
                         </h2>
@@ -144,17 +144,17 @@
     </section>
     <section class="section4">
         <div class="container">
-            <div class="section4-item-container">
+            <div class="section4-wrapper">
                 <div class="section4-left-item">
-                    <div class="section4-left-item-elips">
+                    <div class="section4-elips">
                         <img src="img/ellipse.png" alt="ellipse">
                     </div>
-                    <div class="section4-left-item-iphone">
+                    <div class="section4-iphone">
                         <img src="img/iphone-section4.png" alt="photo iPhone">
                     </div>
                 </div>
                 <div class="section4-right-item">
-                    <div class="section4-right-item-title">
+                    <div class="section4-right-title">
                         <h2>
                             features
                         </h2>
@@ -162,7 +162,7 @@
                             Crypto premium
                         </h3>
                     </div>
-                    <div class="section4-right-item-post">
+                    <div class="section4-right-post">
                         <h5>
                             <img src="img/star-icon.png" alt="logo star">budgeting intervals
                         </h5>
@@ -172,7 +172,7 @@
                             ipsa sint ut voluptatum labore et.
                         </p>
                     </div>
-                    <div class="section4-right-item-post">
+                    <div class="section4-right-post">
                         <h5>
                             <img src="img/cube-icon.png" alt="logo cube">budgeting intervals
                         </h5>
@@ -182,7 +182,7 @@
                             ipsa sint ut voluptatum labore et.
                         </p>
                     </div>
-                    <div class="section4-right-item-post">
+                    <div class="section4-right-post">
                         <h5>
                             <img src="img/cube-icon2.png" alt="logo cube">budgeting intervals
                         </h5>
@@ -210,10 +210,10 @@
                     <a href="#">Explore Now</a>
                 </div>
                 <div class="section5-item-right">
-                    <div class="section5-item-right-ellipse">
+                    <div class="section5-ellipse">
                         <img src="img/ellipse.png" alt="ellipse">
                     </div>
-                    <div class="section5-item-right-screenshot">
+                    <div class="section5-screenshot">
                         <img src="img/screenshot.png" alt="screenshot">
                     </div>
                 </div>
@@ -233,7 +233,7 @@
                 </div>
                 <div class="section6-item">
                     <div class="section6-item-block">
-                        <img src="img/headphones-icon.png" alt="headphones icon">
+                        <img src="img/headphones-icon.svg" alt="headphones icon">
                         <h3>
                             Support
                         </h3>
@@ -243,7 +243,7 @@
                         </p>
                     </div>
                     <div class="section6-item-block">
-                        <img src="img/chart-bar-icon.png" alt="chart bar icon">
+                        <img src="img/chart-bar-icon.svg" alt="chart bar icon">
                         <h3>
                             Sales
                         </h3>
@@ -253,7 +253,7 @@
                         </p>
                     </div>
                     <div class="section6-item-block">
-                        <img src="img/board-icon.png" alt="board icon">
+                        <img src="img/board-icon.svg" alt="board icon">
                         <h3>
                             Onboarding
                         </h3>
@@ -263,7 +263,7 @@
                         </p>
                     </div>
                     <div class="section6-item-block">
-                        <img src="img/archive-content-icon.png" alt="archive icon">
+                        <img src="img/archive-content-icon.svg" alt="archive icon">
                         <h3>
                             Product
                         </h3>
@@ -273,7 +273,7 @@
                         </p>
                     </div>
                     <div class="section6-item-block">
-                        <img src="img/files-icon.png" alt="files icon">
+                        <img src="img/files-icon.svg" alt="files icon">
                         <h3>
                             Quality
                         </h3>
@@ -283,7 +283,7 @@
                         </p>
                     </div>
                     <div class="section6-item-block">
-                        <img src="img/diagram-icon.png" alt="diagram icon">
+                        <img src="img/diagram-icon.svg" alt="diagram icon">
                         <h3>
                             Result
                         </h3>
@@ -298,7 +298,7 @@
     </section>
     <section class="section7">
         <div class="container">
-            <div class="section7-item-container">
+            <div class="section7-wrapper">
                 <div class="section7-left-item">
                     <div class="section7-left-item-elips">
                         <img src="img/ellipse.png" alt="ellips-img">
@@ -509,19 +509,19 @@
                 </div>
             </div>
             <div class="footer-item2">
-                    <div class="footer-item2-left-block">
-                        <p>
-                            &copy; 2025 Untitled UI. All rights reserved.
-                        </p>
-                    </div>
-                    <div class="footer-item2-right-block">
-                        <a href="#"><img src="img/twitter-icon.png" alt="Twitter icon"></a>
-                        <a href="#"><img src="img/linkedin-icon.png" alt="linkedin icon"></a>
-                        <a href="#"><img src="img/facebook-icon.png" alt="facebook icon"></a>
-                        <a href="#"><img src="img/github-icon.png" alt="GitHub icon"></a>
-                        <a href="#"><img src="img/uncertain-icon.png" alt="uncertain icon"></a>
-                        <a href="#"><img src="img/dribbble-icon.png" alt="dribbble icon"></a>
-                    </div>
+                <div class="footer-item2-left-block">
+                    <p>
+                        &copy; 2025 Untitled UI. All rights reserved.
+                    </p>
+                </div>
+                <div class="footer-item2-right-block">
+                    <a href="#"><img src="img/twitter-icon.png" alt="Twitter icon"></a>
+                    <a href="#"><img src="img/linkedin-icon.png" alt="linkedin icon"></a>
+                    <a href="#"><img src="img/facebook-icon.png" alt="facebook icon"></a>
+                    <a href="#"><img src="img/github-icon.png" alt="GitHub icon"></a>
+                    <a href="#"><img src="img/uncertain-icon.png" alt="uncertain icon"></a>
+                    <a href="#"><img src="img/dribbble-icon.png" alt="dribbble icon"></a>
+                </div>
             </div>
         </div>
     </footer>
