--- a/Crypto/index.html
+++ b/Crypto/index.html
@@ -99,7 +99,7 @@
                             <div class="counter">
                                 <span id="current-slide">1</span> - <span id="total-slides">3</span>
                             </div>
-                            <button class="navigation-next" onclick="nextSlide()"><img src="img/right.png" alt="right">
+                            <button class="navigation-next" onclick="nextSlide()">
                             </button>
                         </div>
                     </div>
