--- a/Crypto/index.html
+++ b/Crypto/index.html
@@ -453,7 +453,7 @@
     <footer class="footer">
         <div class="footer-container">
             <div class="footer-item1">
-                <div class="footer-item1-container">
+                <div class="footer-item1-wrapper">
                     <div class="footer-item1-group1">
                         <h5>
                             Product
